More robust definition of \subfiglist_exp_args:Ntt

--- a/packages/subfiglist/subfiglist.sty
+++ b/packages/subfiglist/subfiglist.sty
@@ -503,7 +503,7 @@
 
 \cs_new:Npn \subfiglist_exp_args:Ntt #1 #2 #3
 {
-  \subfiglist_exp_args:NNt \subfiglist_exp_args:NNt #1 { #2 } { #3 }
+  \exp_args:NNoo \exp_args:Noo #1 { #2 } { #3 }
 }
 
 
